// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ShareButton aligned left unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-share-button memori-share-button--align-left"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="memori-dropdown__trigger memori-button memori-button--circle memori-button--icon-only memori-share-button--button memori-button--primary"
      id="base-ui-:r12:"
      tabindex="0"
      title="widget.share"
      type="button"
    >
      <div
        class="memori-button--icon"
      >
        <svg
          class="lucide lucide-share2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`renders ShareButton unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-share-button"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="memori-dropdown__trigger memori-button memori-button--circle memori-button--icon-only memori-share-button--button memori-button--primary"
      id="base-ui-:r4:"
      tabindex="0"
      title="widget.share"
      type="button"
    >
      <div
        class="memori-button--icon"
      >
        <svg
          class="lucide lucide-share2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`renders ShareButton with button not primary unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-share-button"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="memori-dropdown__trigger memori-button memori-button--circle memori-button--icon-only memori-share-button--button"
      id="base-ui-:rm:"
      tabindex="0"
      title="widget.share"
      type="button"
    >
      <div
        class="memori-button--icon"
      >
        <svg
          class="lucide lucide-share2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`renders ShareButton with other tenant img set unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-share-button"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="memori-dropdown__trigger memori-button memori-button--circle memori-button--icon-only memori-share-button--button memori-button--primary"
      id="base-ui-:r1e:"
      tabindex="0"
      title="widget.share"
      type="button"
    >
      <div
        class="memori-button--icon"
      >
        <svg
          class="lucide lucide-share2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`renders ShareButton with share chat unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-share-button"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="memori-dropdown__trigger memori-button memori-button--circle memori-button--icon-only memori-share-button--button memori-button--primary"
      id="base-ui-:r1k:"
      tabindex="0"
      title="widget.share"
      type="button"
    >
      <div
        class="memori-button--icon"
      >
        <svg
          class="lucide lucide-share2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`renders ShareButton with tenant img set unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-share-button"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="memori-dropdown__trigger memori-button memori-button--circle memori-button--icon-only memori-share-button--button memori-button--primary"
      id="base-ui-:r18:"
      tabindex="0"
      title="widget.share"
      type="button"
    >
      <div
        class="memori-button--icon"
      >
        <svg
          class="lucide lucide-share2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`renders ShareButton with title unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-share-button"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="memori-dropdown__trigger memori-button memori-button--circle memori-button--icon-only memori-share-button--button memori-button--primary"
      id="base-ui-:rg:"
      tabindex="0"
      title="widget.share"
      type="button"
    >
      <div
        class="memori-button--icon"
      >
        <svg
          class="lucide lucide-share2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`renders ShareButton with url unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-share-button"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="memori-dropdown__trigger memori-button memori-button--circle memori-button--icon-only memori-share-button--button memori-button--primary"
      id="base-ui-:ra:"
      tabindex="0"
      title="widget.share"
      type="button"
    >
      <div
        class="memori-button--icon"
      >
        <svg
          class="lucide lucide-share2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`renders ShareButton without qr code unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-share-button"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="memori-dropdown__trigger memori-button memori-button--circle memori-button--icon-only memori-share-button--button memori-button--primary"
      id="base-ui-:rs:"
      tabindex="0"
      title="widget.share"
      type="button"
    >
      <div
        class="memori-button--icon"
      >
        <svg
          class="lucide lucide-share2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;
